Fixed bug where hub background was sometimes clipped.

--- a/georegistry-web/src/main/ng2/src/app/core/component/hub/hub.component.css
+++ b/georegistry-web/src/main/ng2/src/app/core/component/hub/hub.component.css
@@ -44,6 +44,8 @@
     background-image: url(../net/geoprism/images/homebackground.jpg);
     background-size: 100%;
     background-repeat: no-repeat;
+    
+    min-height:100%;
 }
 
 h1 {
